test/tests/stages/5_local_variables/valid/kw_var_names.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(return_val)
  =
  const int(3)
  ;
  int
  identifier(void2)
  =
  const int(2)
  ;
  return
  identifier(return_val)
  +
  identifier(void2)
  ;
  }
