test/tests/stages/5_local_variables/invalid_semantics/extra_credit/prefix_incr_non_lvalue.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  ++
  (
  identifier(a)
  +
  const int(1)
  )
  ;
  return
  const int(0)
  ;
  }
